completed all arrors

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -77,9 +77,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="scripts/blogArticles.js"></script>
   <script src="scripts/article.js"></script>
-  <!-- TODO: Link our new script file in. -->
+  <!-- DONE: Link our new script file in. -->
 
   <!-- COMMENT: Explain the ordering of your script files. -->
-  <!-- PUT YOUR RESPONSE HERE -->
+  <!-- Comment Response: jQuery goes first because it is a library for article.js and jQuery extends JavaScript. blogArticle goes before article.js so it can be accessed by article.js -->
 </body>
 </html>
